Tue Jun  8 18:57:48 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (config.status): no need to embbed manifest if not exist.

Tue Jun  8 18:38:36 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/win32.h: include errno.h before defining errnos.

	* include/ruby/win32.h: check definition existance before defining
	  errno macros.

	* win32/win32.c (errmap): define winsock errors mappings.
	  these are VC++10 support, merge from trunk (r27236, r27258).

Tue Jun  8 18:31:02 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* regexp.c (re_compile_pattern): allow zero times match for
	  non-greedy range repeatation. [ruby-core:30613]

Tue Jun  8 18:08:18 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* Makefile.in (fake.rb): double the backslash.

Tue Jun  8 18:08:15 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* configure.in: should replace COMMON_HEADERS if --with-winsock2 is
	  specified.  [ruby-dev:41521]

Tue Jun  8 17:49:18 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c, eval.c, process.c: remove all condition of r26371.
	  now, all platform use the same way. [Bug #3278][ruby-core:30167]

Tue Jun  8 17:45:36 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/iconv/iconv.c (rb_iconv_sys_fail): fix number of arguments.
	  a patch by Masaya TARUI <tarui AT prx.jp>.

Tue Jun  8 17:45:36 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/iconv/iconv.c (rb_iconv_sys_fail): raise BrokenLibrary if
	  errno is not set.  [ruby-dev:41317]

Tue Jun  8 17:32:37 2010  Tanaka Akira  <akr@fsij.org>

	* pack.c (pack_pack): call rb_quad_pack to preserve RangeError.

Tue Jun  8 17:32:37 2010  Tanaka Akira  <akr@fsij.org>

	* pack.c: backport integer pack/unpack from 1.9 for [ruby-core:21937].

	* configure.in: backport RUBY_DEFINT and fixed size integer checks.

	* ruby.h: include stdint.h if available.

	* bignum.c (rb_big_pack): defined..
	  (rb_big_unpack): defined.

	* intern.h (rb_big_pack): declared.
	  (rb_big_unpack): declared.
