@@ -1,3 +1,7 @@
+Thu Jun 10 13:37:35 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* eval.c (rb_load): initialize orig_func.   [ruby-core:27296]
+
 Tue Jun  8 18:57:48 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* win32/Makefile.sub (config.status): no need to embbed manifest if not exist.
